fixed some spacing issues and made right column scrollable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
 }
+
 .custom-yellow{
  color: var(--yellowText)
 }
@@ -18,32 +19,39 @@
     color: White;
     background-repeat: no-repeat;
 }
+
 #front-page-main{
     display: block;
     text-align: center;
     width: 1290px;
     height: 700px;
 }
+
 #front-page-title-pink{
     color: pink;
 }
+
 .custom-black-background{
     background-color: black;
     border-radius: 30px;
 
 }
+
 .custom-opacity-100{
     opacity: 1;
 }
+
 #front-page-main p{
     color: white;
     font-size: 20px;
 }
+
 #front-page-footer{
     margin-top: 50px;
     text-align: center;
     font-size: 20px;
 }
+
 .custom-background-image{
     background-image: url("../images/concert.jpeg");
     background-repeat: no-repeat;
@@ -59,6 +67,7 @@
 #input{
     width: 500px;
 }
+
 #nav-opening-page a li{
     width: fit-content;
     padding: 5px;
@@ -68,12 +77,15 @@
 #return-button{
     margin-top: 5px;
 }
+
 #search-button-second-page{
     margin-top: 10px;
 }
-#search-input-second-page{
-    margin-top: 80px;
-}
+
 #go-back-button{
     margin-top: 10px;
+}
+
+#right-column {
+    overflow-y: scroll;
 }
